# LidarServer_Design3

./: .gitignore  .gitmodules  CMakeLists.txt  LidarServer.h  README.txt  main.cpp  run.sh
Google_tests/: CMakeLists.txt  LidarServerTest.cpp
Google_tests/lib/docs/: advanced.md  gmock_cook_book.md  gmock_faq.md  pkgconfig.md
Google_tests/lib/docs/reference/: matchers.md
Google_tests/lib/googlemock/include/gmock/: gmock-matchers.h  gmock-spec-builders.h
Google_tests/lib/googletest/include/gtest/: gtest-matchers.h  gtest-printers.h  gtest.h
Google_tests/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
Google_tests/lib/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest.cc  gtest_main.cc
lidarServer_lib/: CMakeLists.txt  LidarServer.cpp  LidarServer.h  Point.h
testData/: box.txt  box_invertedValues.txt  tourVersLaDroite.txt  tourVersLaGauche.txt  wallFollowDeviationDansLeCoin.txt  wallFollowDeviationGauche.txt  wallFollowParallel.txt
